--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
  </head>
  <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
  </body>
 </html>
