--- a/index.html
+++ b/index.html
@@ -42,16 +42,26 @@
 
             </div>
             <div class="container">
-                <div class="col-12">
-                    <img src="img/cabin.png" alt="">
-                </div>
-                <div class="col-12">
-                    <img src="" alt="">
-                </div>
-                <div class="col-12"></div>
-                <div class="col-12"></div>
-                <div class="col-12"></div>
-                <div class="col-12"></div>
+                <div class="row">
+                    <div class="col-12 ">
+                        <img class="img-fluid rounded mb-3" src="img/cabin.png" alt="">
+                    </div>
+                    <div class="col-12">
+                        <img class="img-fluid rounded mb-3" src="img/cake.png" alt="">
+                    </div>
+                    <div class="col-12">
+                        <img class="img-fluid rounded mb-3" src="img/circus.png" alt="">
+                    </div>
+                    <div class="col-12">
+                        <img class="img-fluid rounded mb-3" src="img/game.png" alt="">
+                    </div>
+                    <div class="col-12">
+                        <img class="img-fluid rounded mb-3" src="img/safe.png" alt="">
+                    </div>
+                    <div class="col-12">
+                        <img class="img-fluid rounded mb-3" src="img/submarine.png" alt="">
+                    </div>
+                </div>   
             </div>
         </section>
             
