styled portfolio section for full responsiveness

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     
     <main>
-        <section class="pt-5 pb-4 jumbotron container-fluid text-white text-uppercase">
+        <section class="pt-5 pb-4 jumbotron container-fluid text-white text-uppercase bg-green">
                 <div class="row justify-center text-center">
                     <div class="col-12 mb-2">
                         <img  class="avatar-img img-fluid" src="img/avatar.svg" alt="">
@@ -43,26 +43,30 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 ">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <img class="img-fluid rounded mb-3" src="img/cabin.png" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <img class="img-fluid rounded mb-3" src="img/cake.png" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <img class="img-fluid rounded mb-3" src="img/circus.png" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <img class="img-fluid rounded mb-3" src="img/game.png" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <img class="img-fluid rounded mb-3" src="img/safe.png" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-sm-6 col-lg-4 ">
                         <img class="img-fluid rounded mb-3" src="img/submarine.png" alt="">
                     </div>
                 </div>   
             </div>
+        </section>
+
+        <section class="about container-fluid bg-green">
+
         </section>
             
     </main>
